--- a/Tribute_page/style.css
+++ b/Tribute_page/style.css
@@ -1,5 +1,7 @@
 :root {
   box-sizing: border-box;
+  font-size: 1.5vw;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 * {
@@ -26,11 +28,13 @@ header {
   background: white;
   width: 90%;
   margin: 0 auto;
-  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
+}
+
+#img-caption {
+  padding: 1em;
 }
 
 #image {
@@ -47,17 +51,56 @@ header {
   margin: 0.5em;
 }
 
-ul {
+section {
+  width: 60%;
   margin: 0 auto;
-  max-width: max-content;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  align-items: center;
+  min-width: 90%;
   list-style: none;
-  padding: 0 5vw;
 }
 
 li {
-  margin: 1vh 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin: 5px 0;
+  gap: 10px;
+}
+
+.cronology_date {
+  width: 20%;
+  align-self: center;
+  font-weight: bold;
+}
+
+.cronology_desc {
+  width: 80%;
+  line-height: 1.5em;
 }
 
 #more-info {
   margin: 3em 0;
+  padding: 0 2em;
+  line-height: 1.5em;
+}
+
+@media (max-width: 600px) {
+  :root {
+    font-size: initial;
+  }
+  li {
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+  }
+
+  section {
+    width: 100%;
+  }
 }
