--- a/Survey Page/style.css
+++ b/Survey Page/style.css
@@ -3,7 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  color: white;
+  /* color: white; */
 }
 
 body {
@@ -24,6 +24,7 @@ body {
   text-align: center;
   line-height: 1.5rem;
   margin-bottom: 0.5rem;
+  color: white;
 }
 
 #survey-form {
@@ -60,6 +61,11 @@ input[type="checkbox"] {
 
 label {
   display: flex;
+  color: white;
+}
+
+p {
+  color: white;
 }
 
 textarea {
@@ -67,12 +73,10 @@ textarea {
   margin-top: 1rem;
   padding: 0.5rem;
   resize: none;
-  color: black;
 }
 
 button {
   display: block;
-  color: black;
   padding: 1rem 1.5rem;
   margin: 0 auto;
 }
